feat(image): move image codec to new `image` module