@@ -2,41 +2,66 @@ repositories {
     mavenCentral()
 }
 
-test {
-    failOnNoDiscoveredTests = false
-}
-
 dependencies {
-    api project(':arc3d-engine')
-    api project(':arc3d-sketch')
+    api project(':arc3d-core')
     compileOnly "org.lwjgl:lwjgl:${lwjgl_version}"
 
-    testImplementation project(':arc3d-image')
-    testImplementation project(':arc3d-opengl')
-    testImplementation project(':arc3d-vulkan')
-    testImplementation project(':arc3d-vulkan').sourceSets.test.output
+    testImplementation "org.slf4j:slf4j-api:${slf4j_version}"
     testImplementation "org.slf4j:slf4j-simple:${slf4j_version}"
 
     testImplementation "org.lwjgl:lwjgl:${lwjgl_version}"
     testImplementation "org.lwjgl:lwjgl-jemalloc:${lwjgl_version}"
-    testImplementation "org.lwjgl:lwjgl-glfw:${lwjgl_version}"
     testImplementation "org.lwjgl:lwjgl-stb:${lwjgl_version}"
-    testImplementation "org.lwjgl:lwjgl-tinyfd:${lwjgl_version}"
-    testImplementation "org.lwjgl:lwjgl-opengl:${lwjgl_version}"
-    testImplementation "org.lwjgl:lwjgl-opengles:${lwjgl_version}"
-    testImplementation "org.lwjgl:lwjgl-vulkan:${lwjgl_version}"
-    testImplementation "org.lwjgl:lwjgl-vma:${lwjgl_version}"
+    testImplementation "org.lwjgl:lwjgl-spng:${lwjgl_version}"
+    testImplementation "org.lwjgl:lwjgl-zstd:${lwjgl_version}"
     testRuntimeOnly "org.lwjgl:lwjgl:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
     testRuntimeOnly "org.lwjgl:lwjgl-jemalloc:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
-    testRuntimeOnly "org.lwjgl:lwjgl-glfw:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
     testRuntimeOnly "org.lwjgl:lwjgl-stb:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
-    testRuntimeOnly "org.lwjgl:lwjgl-tinyfd:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
-    testRuntimeOnly "org.lwjgl:lwjgl-opengl:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
-    testRuntimeOnly "org.lwjgl:lwjgl-opengles:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
-    testRuntimeOnly "org.lwjgl:lwjgl-vma:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
-    if (rootProject.ext.lwjglNatives == "natives-macos" || rootProject.ext.lwjglNatives == "natives-macos-arm64") {
-        testRuntimeOnly "org.lwjgl:lwjgl-vulkan:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
+    testRuntimeOnly "org.lwjgl:lwjgl-spng:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
+    testRuntimeOnly "org.lwjgl:lwjgl-zstd:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
+}
+
+sourceSets {
+    vector {
+        java.srcDirs = ['src/vector/java']
     }
+    main {
+        compileClasspath += sourceSets.vector.output
+        runtimeClasspath += sourceSets.vector.output
+    }
+    test {
+        compileClasspath += sourceSets.vector.output
+        runtimeClasspath += sourceSets.vector.output
+    }
+}
+
+test {
+    failOnNoDiscoveredTests = false
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+            '--add-modules', 'jdk.incubator.vector',
+            '--add-reads', 'icyllis.arc3d.image=ALL-UNNAMED',
+            '--add-reads', 'icyllis.arc3d.image.test=ALL-UNNAMED',
+    ]
+}
+
+tasks.named('compileVectorJava', JavaCompile) {
+    it.options.release.set(null)
+    sourceCompatibility = '17'
+    targetCompatibility = '17'
+}
+
+tasks.named('compileJava') {
+    dependsOn 'compileVectorJava'
+    options.compilerArgs += [
+            '--patch-module', "icyllis.arc3d.image=${sourceSets.vector.output.classesDirs.asPath}"
+    ]
+}
+
+tasks.named('jar') {
+    from sourceSets.vector.output
 }
 
 publishing {
@@ -46,8 +71,8 @@ publishing {
             from components.java
 
             pom {
-                name = 'Arc3D Granite'
-                description = 'The high-performance GPU execution layer for Arc3D Sketch, architected for modern hardware-accelerated rendering.'
+                name = 'Arc3D Image'
+                description = 'A modern, high-performance image codec library.'
                 url = project.arc3d_url
                 scm {
                     connection = project.arc3d_scm_connection
